// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar is rounded by default 1`] = `
.emotion-0 {
  border-radius: 50%;
}

<div>
  <img
    alt="Clara Keebler"
    class="emotion-0"
    data-testid="avatar"
    src="https://cdn.fakercloud.com/avatars/collegeman_128.jpg"
  />
</div>
`;

exports[`Avatar renders rounded variant 1`] = `
.emotion-0 {
  border-radius: 50%;
}

<div>
  <img
    alt="Beulah Reichel"
    class="emotion-0"
    data-testid="avatar"
    src="https://cdn.fakercloud.com/avatars/jpenico_128.jpg"
  />
</div>
`;

exports[`Avatar renders square variant 1`] = `
.emotion-0 {
  border-radius: 6px;
}

<div>
  <img
    alt="Elisa Jenkins"
    class="emotion-0"
    data-testid="avatar"
    src="https://cdn.fakercloud.com/avatars/necodymiconer_128.jpg"
  />
</div>
`;
